--- a/views/add-clients.ejs
+++ b/views/add-clients.ejs
@@ -54,19 +54,19 @@
                         <div id="form_fields" style="display: none;">
                             <div class="unique-form-group">
                                 <label for="nom">Nom</label>
-                                <input type="text" id="nom" name="nom">
+                                <input type="text" id="nom" name="nom" required>
                             </div>
                             <div class="unique-form-group">
                                 <label for="prenom">Prénom</label>
-                                <input type="text" id="prenom" name="prenom">
+                                <input type="text" id="prenom" name="prenom" required>
                             </div>
                             <div class="unique-form-group">
                                 <label for="adresse">Adresse</label>
-                                <input type="text" id="adresse" name="adresse">
+                                <input type="text" id="adresse" name="adresse" required>
                             </div>
                             <div class="unique-form-group">
                                 <label for="ville">Ville</label>
-                                <input type="text" id="ville" name="ville">
+                                <input type="text" id="ville" name="ville" required>
                             </div>
                             <div class="unique-form-group">
                                 <label for="code_postal">Code Postal</label>
@@ -85,7 +85,7 @@
                             </div>
                             <div class="unique-form-group">
                                 <label for="telephone">Téléphone</label>
-                                <input type="tel" id="telephone" name="telephone" required pattern="[0-9]{10}" title="Veuillez entrer un numéro de téléphone valide (10 chiffres).">
+                                <input type="tel" id="telephone" name="telephone" required pattern="[0-9]{10}" title="Veuillez entrer un numéro de téléphone valide (10 chiffres)." required>
                             </div>
                             <div class="unique-form-group">
                                 <label for="superficie">Superficie (m²)</label>
