--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
                                         </span>
                                     </h1> 
                                     <div class="clear"></div>
-                                    <p class="tms-caption color-white text-xlarge weight-light" data-no-scale>Bienvenue sur le CRM de Moana Energy</p><br/>
+                                    <p class="tms-caption color-white text-xlarge weight-light" data-no-scale>Bienvenue <%= prenom %></p><br/>
                                     <p class="tms-caption color-white text-xlarge weight-light" data-no-scale>Gérez vos clients et projets efficacement</p>
                                 </div>
                                 <div class="column width-12" data-no-scale data-animate-in="preset:flipInY;duration:500ms;delay:650ms;" style="display: flex;flex-direction: column;justify-content: center;align-items: center;">
