--- a/public/css/skin-design-agency.css
+++ b/public/css/skin-design-agency.css
@@ -4071,4 +4071,10 @@ select {
 	}
 	}
 
-	
+	.secondary-btn{
+		background-color: #666666;
+	}
+
+	.secondary-btn:hover{
+		background-color: #666666;
+	}
