--- a/views/add-clients.ejs
+++ b/views/add-clients.ejs
@@ -110,7 +110,7 @@
                             </div>
                         </div>
             
-                        <button type="submit" class="unique-submit-btn" style="margin-top: 20px;">Ajouter le client</button>
+                        <button type="submit" class="unique-submit-btn uniform-button" style="margin-top: 20px;">Ajouter le client</button>
                     </form>
                 </div>
             </div>
