--- a/views/add-user.ejs
+++ b/views/add-user.ejs
@@ -50,7 +50,7 @@
                         <option value="true">Oui</option>
                     </select>
                     <div>
-                        <button type="submit" class="cta-button" style="margin-top: 30px;">Ajouter</button>
+                        <button type="submit" class="cta-button uniform-button" style="margin-top: 30px;">Ajouter</button>
                     </div>
                 </form>
             </div>
