--- a/views/error.ejs
+++ b/views/error.ejs
@@ -7,3 +7,12 @@
         <li class="breadcrumb-item active" aria-current="page">Erreur</li>
     </ol>
 </nav>
+
+<style>
+    .uniform-button, .uniform-link {
+        height: 50px; /* Définir la hauteur souhaitée */
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+</style>
