--- a/views/client.ejs
+++ b/views/client.ejs
@@ -41,12 +41,12 @@
             <div class="column width-12">
                 <div style="margin-bottom: 50px;">
                     <% if (isSuperUser) { %>
-                        <a id="editButton" style="margin: 0;margin-bottom: 5px; background-color: #666666;" class="cta-button" onclick="toggleEditMode()">Modifier la fiche</a>
-                        <a id="cancelButton" style="margin: 0;margin-bottom: 5px; background-color: #666666; display: none;" class="cta-button" onclick="cancelEditMode()">Annuler</a>
+                        <a id="editButton" style="margin: 0;margin-bottom: 5px; background-color: #666666;" class="cta-button uniform-link" onclick="toggleEditMode()">Modifier la fiche</a>
+                        <a id="cancelButton" style="margin: 0;margin-bottom: 5px; background-color: #666666; display: none;" class="cta-button uniform-link" onclick="cancelEditMode()">Annuler</a>
                     <% } %>
                     <% if (client.statutClient !== 'en attente') { %>
-                    <a href="/client/<%= client.id %>/schedule" class="cta-button client-cta" style="margin: 0;margin-bottom: 5px;">Programmer un rendez-vous</a>
-                    <button class="cta-button client-cta" onclick="confirmSendToDDER()">Transmettre la fiche à DDER</button>
+                    <a href="/client/<%= client.id %>/schedule" class="cta-button client-cta uniform-link" style="margin: 0;margin-bottom: 5px;">Programmer un rendez-vous</a>
+                    <a class="cta-button client-cta uniform-button" onclick="confirmSendToDDER()">Transmettre la fiche à DDER</a>
                     <% } %>
                 </div>
                 <form id="clientForm" action="/client/<%= client.id %>/edit" method="POST" enctype="multipart/form-data" style="display: none;">
@@ -146,8 +146,8 @@
                 </form>
                 <div id="sendToDDERConfirmation" style="display: none; margin-top: 20px;margin-bottom: 30px;">
                     <p>Êtes-vous sûr de vouloir transmettre la fiche à DDER ?</p>
-                    <button class="cta-button" onclick="sendToDDER('<%= client.id %>')">Confirmer</button>
-                    <button class="cta-button" onclick="cancelSendToDDER()">Annuler</button>
+                    <button class="cta-button uniform-button" onclick="sendToDDER('<%= client.id %>')">Confirmer</button>
+                    <button class="cta-button uniform-button" onclick="cancelSendToDDER()">Annuler</button>
                 </div>
                 <div id="clientDetails" class="toastBox alertingBlue" style="padding-right: 10px;padding-left: 15px;">
                     <div >
@@ -199,13 +199,13 @@
                     </div>
                     <% if (isSuperUser) { %>
                         <div style="margin-top: 20px">
-                            <button id="deleteButton" class="cta-button" style="background-color: #666666;" onclick="confirmDelete()">Supprimer le client</button>
+                            <button id="deleteButton" class="cta-button uniform-button" style="background-color: #666666;" onclick="confirmDelete()">Supprimer le client</button>
                         </div>
                         <div id="deleteConfirmation" style="display: none; margin-top: 20px;">
                             <p>Veuillez entrer l'email du commercial pour confirmer la suppression :</p>
                             <input type="email" id="confirmEmail" placeholder="Email du commercial">
-                            <button class="cta-button" style="background-color: rgb(237, 41, 41);" onclick="deleteClient('<%= client.id %>')">Confirmer la suppression</button>
-                            <button class="cta-button" onclick="cancelDelete()">Annuler</button>
+                            <button class="cta-button uniform-button" style="background-color: rgb(237, 41, 41);" onclick="deleteClient('<%= client.id %>')">Confirmer la suppression</button>
+                            <button class="cta-button uniform-button" onclick="cancelDelete()">Annuler</button>
                         </div>
                     <% } %>
                 </div>
@@ -220,7 +220,7 @@
         document.getElementById('clientDetails').style.display = 'none';
         document.getElementById('editButton').style.display = 'none';
         document.getElementById('cancelButton').style.display = 'inline-block';
-        document.querySelectorAll('.client-cta').forEach(button => button.style.display = 'none');
+
     }
 
     function cancelEditMode() {
@@ -228,7 +228,7 @@
         document.getElementById('clientDetails').style.display = 'block';
         document.getElementById('editButton').style.display = 'inline-block';
         document.getElementById('cancelButton').style.display = 'none';
-        document.querySelectorAll('.client-cta').forEach(button => button.style.display = 'inline-block');
+
     }
 
     function toggleFields() {
