--- a/views/partials/fiche-client.ejs
+++ b/views/partials/fiche-client.ejs
@@ -16,8 +16,8 @@
     <p class="type_renovation"><strong>Type de rénovation:</strong> <%= (Array.isArray(client.type_renovation) ? client.type_renovation : (client.type_renovation ? [client.type_renovation] : [])).join(', ').charAt(0).toUpperCase() + (Array.isArray(client.type_renovation) ? client.type_renovation : (client.type_renovation ? [client.type_renovation] : [])).join(', ').slice(1) %></p>
     <p><strong>Date de création:</strong> <%= new Date(client.createdAt).toLocaleDateString('fr-FR', { day: '2-digit', month: '2-digit', year: 'numeric' }) %></p>
 </div>
-<button onclick="toggleDetails(this)">Voir plus</button>
-<a href="/client/<%= client.id %>" class="cta-button">Voir la fiche client</a>
+<a class="cta-button secondary-btn uniform-link" style="margin-right: 5px; margin-bottom: 5px" onclick="toggleDetails(this)">Voir plus</a>
+<a href="/client/<%= client.id %>" class="cta-button uniform-link">Voir la fiche client</a>
 
 <script>
     function toggleDetails(button) {
