--- a/views/login.ejs
+++ b/views/login.ejs
@@ -26,7 +26,8 @@
           <label for="password">Mot de passe :</label>
           <input type="password" id="password" name="password" required>
         </div>
-        <button type="submit" class="cta-button">Se connecter</button>
+        <a type="submit" class="cta-button" style="margin-right: 10px;">Se connecter</a>
+        <a href="/auth/forgot-password">Mot de passe oublié ?</a>
     </form>
             </div>
         </div>
