--- a/views/faq.ejs
+++ b/views/faq.ejs
@@ -25,7 +25,17 @@
                     <h3>Ajouter des clients</h3>
                     <div class="faq-item">
                         <button class="faq-question">
-                            Quels sont les champs nécessaires pour ajouter un client sur le dashboard ? <span class="arrow">⬇️</span>
+                            Quels sont les champs nécessaires pour ajouter un client sur le da<iframe 
+                            class="youtubeVideoMobile pagelayer-video-iframe" 
+                            id="embed_video" 
+                            width="100%" 
+                            height="315" 
+                            src="https://youtube.com/embed/r2eL0ane2V8?autoplay=0&loop=0&playlist=r2eL0ane2V8" 
+                            frameborder="0" 
+                            loading="lazy" 
+                            title="Vidéo YouTube"
+                            allowfullscreen>
+                        </iframe>shboard ? <span class="arrow">⬇️</span>
                         </button>
                         <div class="faq-answer">
                             <p>Pour ajouter un client, les champs obligatoires incluent :</p>
