--- a/public/css/skin-design-agency.css
+++ b/public/css/skin-design-agency.css
@@ -4078,3 +4078,15 @@ select {
 	.secondary-btn:hover{
 		background-color: #666666;
 	}
+
+	.dark-mode {
+		background-color: #232323;
+		color: #fff;
+		h2, h3, h4, h5, h6 {
+			color: #fff;
+		}
+
+		div.toastBox{
+			box-shadow: rgba(0, 0, 0, 0.5) 0px 2px 8px 0px;
+		}
+	}
