--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -18,7 +18,7 @@
 
       <!-- Communication de Moana Energy -->
       <section id="communication">
-        <h2>Communication de Moana Energy</h2>
+        <h2>Consignes et objectifs</h2>
         <% stats.communication.forEach(communication => { %>
           <div class="col-sm-3">
             <div class="toastBox alertingBlue">
