--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -21,7 +21,7 @@
         <h2>Consignes et objectifs</h2>
         <% stats.communication.forEach(communication => { %>
           <div class="col-sm-3">
-            <div class="toastBox alertingBlue col-sm-3">
+            <div class="toastBox alertingBlue">
               <ul>
                 <li><strong>Objectifs :</strong> <%= communication.objectifs %></li>
                 <li><strong>Consignes :</strong> <%= communication.consignes %></li>
@@ -30,7 +30,7 @@
           </div>
         <% }) %>
         <% if (!stats.communication.length) { %>
-          <li class="toastBox alertingBlue" style="list-style: none;">Aucune communication pour le moment.</li>
+          <li class="toastBox alertingBlue col-sm-3" style="list-style: none;">Aucune communication pour le moment.</li>
         <% } %>
       </section>
 
